# zotero-to-md

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/zotero_to_md/: __init__.py  cli.py  collection_tree.py  config.py  errors.py  extract_pdf.py  extract_web.py  markdown_writer.py  models.py  state_store.py  sync.py  zotero_client.py
tests/: test_collection_tree.py  test_config.py  test_extract_pdf.py  test_extract_web.py  test_markdown_writer.py  test_state_store.py  test_sync_pipeline.py  test_zotero_client.py
