[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-to-md"
version = "0.1.0"
description = "Sync Zotero collections into Markdown files with PDF and web extraction."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "jandorn" },
]
keywords = [
    "cli",
    "markdown",
    "notes",
    "research",
    "zotero",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "pyzotero>=1.6.16",
    "readability-lxml>=0.8.4.1",
    "trafilatura>=2.0.0",
    "typer>=0.16.1",
]

[project.scripts]
zotero-to-md = "zotero_to_md.cli:app"

[project.urls]
Homepage = "https://github.com/jandorn/zotero-to-md"
Repository = "https://github.com/jandorn/zotero-to-md"
Issues = "https://github.com/jandorn/zotero-to-md/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "respx>=0.22.0",
    "ruff>=0.15.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_to_md"]
